updated config to work with current public js paths

--- a/Resources/config/altamira-config.ini
+++ b/Resources/config/altamira-config.ini
@@ -4,5 +4,8 @@ js.flotpath = js/flot/
 js.flotpluginpath = js/flot/
 js.jqplotlib = js/jqplot/jquery.jqplot.js
 js.jqplotpluginpath = js/jqplot/plugins/
+js.d3pluginpath = js/nvd3/
+js.d3lib = js/d3/d3.v2.min.js
 css.jqplotpath = js/jqplot/jquery.jqplot.css
+css.d3path = js/nvd3/src/nv.d3.css
 altamira.typeconfigpath = Type/TypeConfig.ini
