update altamirabundle to work with ajax requests

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -13,3 +13,7 @@ malwarebytes_altamira_jqplot_library_example:
 malwarebytes_altamira_d3_library_example:
     pattern:  /d3
     defaults: { _controller: MalwarebytesAltamiraBundle:Example:d3 }
+
+malwarebytes_altamira_ajax_example:
+    pattern:  /ajax
+    defaults: { _controller: MalwarebytesAltamiraBundle:Example:ajax }
